--- a/src/assets/design-system/variables/_color-palette.scss
+++ b/src/assets/design-system/variables/_color-palette.scss
@@ -20,26 +20,6 @@ $palette-colors: (
   'neutral-8': #3f4447,
   'neutral-9': #282c2e,
   'neutral-10': #0e1214,
-  'danger-1': #ffefef,
-  'danger-2': #fddcd8,
-  'danger-3': #f3b7ae,
-  'danger-4': #f28d7e,
-  'danger-5': #eb604b,
-  'danger-6': #d4422f,
-  'danger-7': #ba3223,
-  'danger-8': #99251a,
-  'danger-9': #75140d,
-  'danger-10': #38110f,
-  'warning-1': #fffbd1,
-  'warning-2': #fef2a4,
-  'warning-3': #f0d678,
-  'warning-4': #f0c51a,
-  'warning-5': #dba70c,
-  'warning-6': #bf8f32,
-  'warning-7': #9e772b,
-  'warning-8': #7a5f28,
-  'warning-9': #4f3d0f,
-  'warning-10': #2b2205,
   'success-1': #e9f9ee,
   'success-2': #ccebd7,
   'success-3': #92ceac,
@@ -50,6 +30,36 @@ $palette-colors: (
   'success-8': #0c5e39,
   'success-9': #0c422b,
   'success-10': #02261b,
+  'info-1': #eaf1fe,
+  'info-2': #cfe0ff,
+  'info-3': #a1c2ff,
+  'info-4': #739dff,
+  'info-5': #4782ff,
+  'info-6': #2b6bff,
+  'info-7': #2056e8,
+  'info-8': #1945bf,
+  'info-9': #0f3191,
+  'info-10': #061c57,
+  'warning-1': #fffbd1,
+  'warning-2': #fef2a4,
+  'warning-3': #f0d678,
+  'warning-4': #f0c51a,
+  'warning-5': #dba70c,
+  'warning-6': #bf8f32,
+  'warning-7': #9e772b,
+  'warning-8': #7a5f28,
+  'warning-9': #4f3d0f,
+  'warning-10': #2b2205,
+  'danger-1': #ffefef,
+  'danger-2': #fddcd8,
+  'danger-3': #f3b7ae,
+  'danger-4': #f28d7e,
+  'danger-5': #eb604b,
+  'danger-6': #d4422f,
+  'danger-7': #ba3223,
+  'danger-8': #99251a,
+  'danger-9': #75140d,
+  'danger-10': #38110f,
 );
 
 @function palette-color($key) {
