fix(components): validation and error states

--- a/src/assets/design-system/variables/components/input-and-actions/_checkbox.scss
+++ b/src/assets/design-system/variables/components/input-and-actions/_checkbox.scss
@@ -20,3 +20,4 @@ $checkbox-checkmark-outline: var(--brand-focused);
 // Checkbox
 $checkbox-label-gap: $space-8;
 $checkbox-disabled-disabled-opacity: 0.3;
+$checkbox-error-color: var(--brand-text-danger);
