--- a/src/assets/design-system/variables/components/input-and-actions/_radio.scss
+++ b/src/assets/design-system/variables/components/input-and-actions/_radio.scss
@@ -20,3 +20,4 @@ $radio-checkmark-outline: var(--brand-focused);
 // Checkbox
 $radio-label-gap: $space-8;
 $radio-disabled-disabled-opacity: 0.3;
+$radio-error-color: var(--brand-text-danger);
